--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -37,7 +37,7 @@
     "access": "public"
   },
   "devDependencies": {
-    "@next-md-blog/core": "workspace:*",
+    "@next-md-blog/core": "^1.0.1",
     "@types/node": "^22.0.0",
     "@vitest/coverage-v8": "^4.0.8",
     "typescript": "^5.7.0",
